# design-pattern

./: README.md
design-pattern-go/: main.go
design-pattern-python/: pyproject.toml
design-pattern-python/design_pattern_python/abstract_factory/: div.py  factory.py  list.py  main.py
design-pattern-python/design_pattern_python/adapter/: delegation.py  inheritance.py
design-pattern-python/design_pattern_python/bridge/: display.py  display_impl.py
design-pattern-python/design_pattern_python/builder/: builder.py  director.py  html_builder.py  text_builder.py
design-pattern-python/design_pattern_python/chain_of_responsibility/: support.py
design-pattern-python/design_pattern_python/composite/: composite.py
design-pattern-python/design_pattern_python/decorator/: decorator.py
design-pattern-python/design_pattern_python/facade/: asset.py  page_maker.py
design-pattern-python/design_pattern_python/factory_method/: factory_method.py
design-pattern-python/design_pattern_python/iterator/: build_in.py  self_made.py
design-pattern-python/design_pattern_python/memento/: game.py
design-pattern-python/design_pattern_python/observer/: number_generator.py  observer.py
design-pattern-python/design_pattern_python/prototype/: prototype.py
design-pattern-python/design_pattern_python/singleton/: singleton.py
design-pattern-python/design_pattern_python/strategy/: hand.py  player.py  strategy.py
design-pattern-python/design_pattern_python/template_method/: template_method.py
design-pattern-python/design_pattern_python/visitor/: entry.py  visitor.py
(+60 files in other folders)
