[tool.poetry]
name = "design-pattern-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "design_pattern_python"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
